--- a/02_Learn_Log/public/index.html
+++ b/02_Learn_Log/public/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>学习日志</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="root"></div>
-  </body>
+    <!-- 专门渲染遮罩层 -->
+    <div id="backDrop-root"></div>
+</body>
+
 </html>
